--- a/nav.css
+++ b/nav.css
@@ -4,7 +4,10 @@
   margin: 0px;
 }
 
-
+:root{
+  --blanco: #ffffff;
+  --segundo: #1b0605;
+}
 body {
   font-family: roboto, arial, sans-serif;
   width: 100vw;
@@ -14,7 +17,6 @@ body {
 a{
   text-decoration: none;
   list-style: none;
-  color: auto;
 }
 .bo{
   font-weight: 500;
@@ -24,6 +26,10 @@ li {
 }
 h3{
   font-size: 2em;
+}
+h4{
+  font-size: 1.3em;
+  font-weight: 400;
 }
 .pd10{
   padding: 10px;
@@ -35,6 +41,9 @@ header{
   position: fixed;
   z-index: 2;
   top: 0px;
+}
+.gris-f{
+  background-color: rgb(247, 247, 247);
 }
 .logo-header{
   max-width: 110px;
@@ -71,7 +80,7 @@ header{
 }
 .nav .dropdown a:hover, .nav a:hover {
   color: var(--blanco);
-  background-color: #000000;
+  background-color: var(--segundo);
 }
 .nav .links {
   display: grid;
@@ -138,9 +147,11 @@ button:focus {
   display: flex;
   bottom: 0;
   overflow: auto;
+  background-color: var(--blanco);
+}
+.tab-container a:hover{
   background-color: rgb(255, 217, 0);
 }
-
 
 
 .tab {
@@ -150,12 +161,12 @@ button:focus {
   flex-direction: column;
   justify-content: center;
   /*   width: 100%; */
+  color: var(--segundo);
   
 }
 
 .tab.is-active {
-  background-color: #ff0000;
-  color: #ffffff;
+  background-color: rgb(255, 217, 0);
 }
 
 .tab.is-active:after {
@@ -182,9 +193,6 @@ button:focus {
   height: 8%;
   padding: 15px 20px;
 }
-.titulo{
-  /*height: 5%;*/
-}
 /* seccion 1*/
 @media only screen and (max-width: 768px) {
   .nav .content .links {
@@ -208,6 +216,22 @@ button:focus {
   flex-direction: column;
   gap: 1rem;
 }
+.flex-dsc{
+  display: flex;
+  flex-direction: column;
+  gap: .3em;
+}
+.porciones{
+  font-size: .9em;
+  font-style: italic;
+  color: #797979;
+  font-weight: 500;
+}
+.torta-precio{
+  font-size: 1.2em;
+  font-weight: bolder;
+  color: #ff0000;
+}
 .prodct{
   width: 100%;
   max-width: 450px;
@@ -221,7 +245,7 @@ button:focus {
   width: 98%;
 }
 .overf{
-  overflow: scroll;
+  overflow: auto;
 }
 .botones-prd{
   display: flex;
@@ -240,9 +264,12 @@ button:focus {
 .prodconsultar{
   width: 40%;
   height: 40px;
-background-color: #797979;
+background-color: #0dc143;
 border-radius: 10px;
 color: #fff;
+}
+.prodconsultar img{
+  width: 30%;
 }
 .h100{
   height: 100px;
@@ -273,7 +300,7 @@ color: #fff;
   width: 100%;
 }
 .qrpago{
-width: 10em;
+width: 13em;
 }
 @media only screen and (min-width: 720px)  {
   .tab-container{       
@@ -282,4 +309,33 @@ width: 10em;
   .fllex{
     flex-direction: row;
   }
+}
+
+.t-precio{
+  font-size: 1.8em;
+  font-weight: bold;
+}
+.select{
+  width: 8em;
+  padding: .8em;
+  font-size: 1em;
+}
+.descr-prd{
+  font-size: 1.1em;
+}
+
+.confirmation{
+  background:#feba01;
+  color:#383838;
+  padding:10px 15px;
+  border-radius:3px;
+  display:none;
+  position:fixed;
+  bottom:20px;
+  left:5px;
+  z-index: 3;
+}
+.activo{
+  background-color: var(--segundo);
+  color: var(--blanco) !important;
 }
